--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1054,8 +1054,9 @@ main {
   width: 100%;
   height: 200px;
   border-radius: 16px;
-  overflow: hidden;
+  /* overflow: hidden; */
   margin-bottom: 15px;
+  
 }
 
 .project-img::before {
@@ -2051,4 +2052,51 @@ textarea.form-input::-webkit-resizer {
   .timeline-text {
     max-width: 700px;
   }
+}
+
+.project-details {
+  color: var(--light-gray);
+  font-size: var(--fs-6);
+  font-weight: var(--fw-300);
+  line-height: 1.6;
+}
+
+.project-image-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.project-image-container img {
+  width: 90%;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.project-image-container figure {
+  text-align: center;
+}
+
+.project-button {
+  width: 150px;
+  padding: 10px 15px;
+  background-color: #2b2b2b;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.project-button:hover {
+  background-color: #424242;
+}
+.HIC{
+  display: none;
+}
+.Project-List{
+  display: block;
+}
+.ORACLE{
+  display: none;
 }
